--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,20 +1,24 @@
 name: 🐍 Generate Snake Animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Every day at midnight
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"  # every 24 hours
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Generate Snake SVG
-        uses: Platane/snk@v3
+        uses: Platane/snk@master
         with:
           github_user_name: JitSurani
           outputs: |
             dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake-hacker.svg?color_snake=#00FF00&color_dots=#444444,#666666,#AAAAAA,#00FF00
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
